           * <widget_path>.value for sliders
           * <widget_path>.selected for toggle buttons (checkbuttons)
           * <widget_path>.selected_index for listboxes (which include radiobuttons)
       * wesnoth.set_dialog_active() -> <widget_path>.enabled
       * wesnoth.set_dialog_callback() -> <widget_path>.on_modified
       * helper.get_user_choice() -> gui.get_user_choice()
   * Deprecated `[get_numerical_minimum]`, `[get_numerical_maximum]` and `[reverse_value]`
   * Fixed a bug that made `[unknown_message]` not working
   * Fixed `[show_quick_debug]`, `[show_side_debug]` and `[prompt] (they didn't work on the 1.15.x series)
   * Increased the width of the `[show_quick_debug]` dialog to allow displaying the upkeep radiobuttons
   * Fixed `[flash_color]`, `[flash_screen]` and `[animate_path]` not working on 1.15.x due to a "number has no integer representation" error
   * Fixed a variable in debug_utils that didn't work any more due to strict mode
   * Bumped Wesnoth version requirement to 1.15.14

Version 1.8.0:
   * Added support for flag_icon, defeat_condition, scroll_to_leader, lost,
     village_support, recruit and hidden to [show_side_debug]
   * Added support for race, level, cost and upkeep fields, as well as
     invulnerable status, to [show_quick_debug]
   * side.color is now handled by a text box in [show_side_debug]
   * Various layout corrections in [show_side_debug] and [show_quick_debug]
   * Refactored [set_shroud]
   * Converted documentation to Markdown

Version 1.7.0
   * Removed file ai_helper.lua.
   * Rewritten [get_numerical_minimum] and [get_numerical_maximum]
   * Completely reworked layout and code of HTML readme
   * Enabled Pango markup in [alert], [confirm], [prompt] and [item_dialog]
   * Added [loot] tag, by Elvish_Hunter
   * Added [choice_box] tag, by Elvish_Hunter
   * Bumped Wesnoth version requirement to 1.11.9
   * Fixed a bug in color selection that made [show_side_debug] not working